--- a/tye.yaml
+++ b/tye.yaml
@@ -10,6 +10,9 @@ services:
   project: frontend/frontend.csproj
 - name: backend
   project: backend/backend.csproj
+  bindings:
+    - routes:
+        - /swagger
 
 extensions:
   - name: seq
